# halting_problems

./: README.md
exgames/: .iex.exs  README.md  mix.exs
exgames/benchmarks/: choose.exs  combinations.exs  multiset_permutations.exs  permutations.exs  pythagorean_triples.exs  sieve.exs
exgames/benchmarks/choose_benchmarks/: choose1.benchee  choose2.benchee
exgames/benchmarks/combinations_benchmarks/: combinations1.benchee
exgames/benchmarks/multiset_permutations_benchmarks/: README.md  multiset_permutations1.benchee  multiset_permutations2.benchee
exgames/benchmarks/permutations_benchmarks/: README.md  permutations1.benchee  permutations2.benchee
exgames/benchmarks/sieve_benchmarks/: README.md  (+4 more)
exgames/lib/: application.ex  combinatorics.ex  decimals.ex  exgames.ex  graph.ex  integers.ex  lists.ex  obscura.ex  path_finding.ex  priority_queue.ex  sets.ex  trig.ex
exgames/test/: combinatorics_test.exs  exgames_test.exs  graph_test.exs  integers_test.exs  lists_test.exs  path_finding_test.exs  priority_queue_test.exs  sets_test.exs  trig_test.exs
pyai/: .gitignore  README.md  check_mps.py  generate_image.py  generate_video.py  pyproject.toml
pyai/pyai/: bfl_dev.py  bfl_dev_fluxpipeline.py  bfl_schnell.py  sentiment_analysis.py  stable_diffusion.py
pyai2/: check_mps.py  main.py  pyproject.toml
pygames/src/: days_in_month.py
rsgames/: Cargo.toml  README.md
rsgames/.zed/: tasks.json
rsgames/src/: combinatorics.rs  factors.rs  files.rs  floats.rs  integers.rs  lib.rs  main.rs  math.rs  obscura.rs  primes.rs  strings.rs  trig.rs  words.rs
(+15 files in other folders)
