[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyai"
version = "0.0.1"
dependencies = [
    "accelerate",
    "datasets",
    "diffusers",
    "evaluate",
    "huggingface-hub",
    "pandas",
    "protobuf",
    "sentencepiece",
    "torch",
    "transformers",
]
